...
                const SocialAuthGroup(),

                const SizedBox(height: 25),

                // Verify Button
                AuthPrimaryButton(
                  text: 'Continue',
                  onTap: () async {
                    final email = _emailController.text;
                    final code = _verificationController.text;

                    if (email.isEmpty || code.isEmpty) {
                      ScaffoldMessenger.of(context).showSnackBar(
...
