...
                  horizontal: 22, vertical: 12),
              decoration: BoxDecoration(
                color: const Color(0xFF2B99E3),
                borderRadius: BorderRadius.circular(20),
              ),
              child: const Text(
                'Add to Cart',
                style: TextStyle(
                  fontFamily: 'Poppins',
                  fontWeight: FontWeight.w600,
                  fontSize: 13,
                  color: Colors.white,
                ),
...
